# GLES30ToVideo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hyq/hm/opengles30/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hyq/hm/opengles30/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hyq/hm/opengles30/: ExampleUnitTest.java
exoplayer/src/main/java/com/google/android/exoplayer2/video/: MediaCodecVideoRenderer.java
gles/: CMakeLists.txt  build.gradle
gles/src/androidTest/java/com/hyq/hm/gles/: ExampleInstrumentedTest.java
gles/src/main/: AndroidManifest.xml
gles/src/main/cpp/: hm_gles.cpp  hm_gles_glsl_program.c  hm_gles_mesh.c  hm_gles_model.c  hm_gles_texture.c  hm_types.h
gles/src/main/java/com/hyq/hm/gles/: EGLUtils.java  GLES.java
gles/src/main/res/values/: strings.xml
gles/src/test/java/com/hyq/hm/gles/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
